# MyPosterBot1

./: .env.sample  .gitignore  .pdm.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
src/: __main__.py  app.py
src/assets/: __init__.py  _helpers.py  commands.py  config.py  helpers.py  kbs.py  loader.py  models.py  scenes.py  texts.py
src/events/: __init__.py  add_channel.py  channels.py  commands.py  edit_posts_sign.py  new_post.py
src/handlers/: __init__.py  _new_post.py  add_channel.py  channels.py  logs.py  main.py  new_post.py  test.py
src/handlers/admin/: logs.py
src/handlers/channels/: __init__.py  edit_posts_sign.py
src/helpers/: main.py
src/jobs/: __init__.py
src/middlewares/: __init__.py  answer_any_query.py  main.py
src/tasks/: main.py
